<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        tools:context=".ui.edit.EditTransaksiFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/konfirmasi_transaksi"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:gravity="center_horizontal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nama_pelanggan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginHorizontal="16dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:textSize="16sp"
                android:hint="@string/nama_pelanggan" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_paket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_paket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginHorizontal="16dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:textSize="16sp"
                android:hint="@string/pilihan_paket" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_total_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_total_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginHorizontal="16dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:textSize="16sp"
                android:hint="@string/total_harga" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_total_bayar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_total_bayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginHorizontal="16dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:textSize="16sp"
                android:hint="@string/total_bayar" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_kembalian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_kembalian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginHorizontal="16dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:textSize="16sp"
                android:hint="@string/kembalian" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/btn_submit_transaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/update_transaksi"
            android:textColor="@android:color/white" />

    </LinearLayout>
</layout>
