<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/list_data_cukur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="12dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_kiri"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_paket"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jumat_27_maret_2020"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:paddingBottom="4dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_nama_pelanggan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/azmi"
                            android:textSize="14sp"
                            android:textColor="@color/text_brown" />

                        <TextView
                            android:id="@+id/tv_paket"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/paket"
                            android:layout_marginHorizontal="4dp"
                            android:textSize="14sp"
                            android:textColor="@color/text_brown" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:padding="2dp"
                            android:layout_marginTop="2dp"
                            android:src="@drawable/money"/>

                        <TextView
                            android:id="@+id/tv_harga"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rp35.000"
                            android:layout_marginHorizontal="5dp"
                            android:textSize="14sp"
                            android:textColor="@color/text_brown" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/layout_kiri"
                android:layout_alignBottom="@+id/layout_kiri"
                android:layout_gravity="center_vertical"
                android:src="@drawable/chevron" />

        </RelativeLayout>

    </LinearLayout>
</layout>
